init-container.yaml
[root@master ~]$ cat pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: pod1

spec:
  containers:
    - name: cont1
      image: nginx
