podwithlimit.yml
apiVersion: v1
kind: Pod

metadata:
  name: pod3

spec:
  containers:
    - name: cont1
      image: nginx
      resources:
        requests:
          memory: "100Mi"
          cpu: "100m"
        limits:
          memory: "300Mi"
          cpu: "200m"
